--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Andy(张展亮)的个人网站</title>
+    <title>Andy</title>
     <meta name="description" content="Andy(张展亮) 的个人博客笔记文档，Andy(张展亮) 的前端笔记，Andy(张展亮) 的前端博客文章">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
