--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <a href="https://weibo.com/zzlwte" target="_blank">微博</a>
         </p>
         <p>
-            <a href="zhihu.com/people/zzlwte" target="_blank">知乎</a>
+            <a href="https://zhihu.com/people/zzlwte" target="_blank">知乎</a>
         </p>
     </div>
     <canvas></canvas>
