--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <h1>Andy</h1>
         <h2>Design, Code & Things in Between</h2>
         <p>
-            <a href="https://fxq.design" target="_blank">Blog</a>
+            <a href="https://jiawen.live" target="_blank">Blog</a>
         </p>
         <p>
             <a href="https://twitter.com/zzlwte" target="_blank">Twitter</a>
