--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
         a:hover {
             color: #f33;
         }
-
     </style>
 </head>
 
@@ -155,6 +154,22 @@
         document.onclick = i
         document.ontouchend = i
         i()
+
+        function successFunction(position) {
+            var lat = position.coords.latitude;
+            var long = position.coords.longitude;
+            console.log('Your latitude is :' + lat + ' and longitude is ' + long);
+        }
+
+        function errorFunction(err) {
+            console.log('err', err);
+        }
+
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(successFunction, errorFunction);
+        } else {
+            alert('It seems like Geolocation, which is required for this page, is not enabled in your browser. Please use a browser which supports it.');
+        }
     </script>
 </body>
 
