--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         function successFunction(position) {
             var lat = position.coords.latitude;
             var long = position.coords.longitude;
-            console.log('Your latitude is :' + lat + ' and longitude is ' + long);
+            console.log(lat + ' and' + long);
         }
 
         function errorFunction(err) {
