--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         function successFunction(position) {
             var lat = position.coords.latitude;
             var long = position.coords.longitude;
-            console.log(lat + ' and ' + long);
+            console.log(long + ' and ' + lat);
         }
 
         function errorFunction(err) {
