--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         function successFunction(position) {
             var lat = position.coords.latitude;
             var long = position.coords.longitude;
-            document.querySelector("#wrapper > p:nth-child(7)")[0].innerHTML = long + ' and ' + lat;
+            document.querySelector("#wrapper > p:nth-child(7)").innerHTML = long + ' and ' + lat;
             console.log(long + ' and ' + lat);
         }
 
